# graph-mcp

./: AB_TEST_RESULTS.md  AB_TEST_RESULTS_DEEP_ANALYSIS.md  AB_TEST_RESULTS_RAG_ANYTHING.md  AGENTS.md  GEMINI.md  GEMINI_INDEXING_EXPLAINED.md  README.md  README_CN.md  archimedes.yaml  design.md  main.py  pyproject.toml
.github/workflows/: ci.yml
scripts/: gemini_token_ab.sh
src/archimedes/: __init__.py  config.py  graph.py  server.py  skeleton.py  state.py  watcher.py
tests/: test_config.py  test_graph.py  test_hashing.py  test_server.py  test_skeleton.py  test_watcher.py
