[project]
name = "archimedes"
version = "0.1.0"
description = "A lightweight MCP Server for Python codebase skeleton extraction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.27.0",
    "pathspec>=1.1.1",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/archimedes"]
